Keyframes not allowed anymore in textures offset(when in image sequence option ). #34493

Closed
opened 2013-03-02 14:48:22 +01:00 by ricardo graca · 10 comments

%%%--- Linux Ubuntu 12.04 and Linux LMDE , Gforce and intel cards---

- Blender 2.66 32 bits and 64 bits ---


- Keyframes not allowed anymore in textures offset(when in image sequence option ).---


- Import "image as planes", then go to textures > change "single image" to "image sequence" >  --- then we get three fields ( frames, start and offset ). Using blender 2.64 I can animate these fields, but now, with Blender 2.66 I can not.

%%%

%%%--- Linux Ubuntu 12.04 and Linux LMDE , Gforce and intel cards--- - Blender 2.66 32 bits and 64 bits --- - Keyframes not allowed anymore in textures offset(when in image sequence option ).--- - Import "image as planes", then go to textures > change "single image" to "image sequence" > --- then we get three fields ( frames, start and offset ). Using blender 2.64 I can animate these fields, but now, with Blender 2.66 I can not. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Had same issue in 2.66 OS X 64bit on 10.75

I was using image sequence offset in object-materials-texture panel, and likewise unable to keyframe. Had to go back to 2.64 for this to work.%%%

%%%Had same issue in 2.66 OS X 64bit on 10.75 I was using image sequence offset in object-materials-texture panel, and likewise unable to keyframe. Had to go back to 2.64 for this to work.%%%
Member

%%%We purposedly disabled this, after getting bugreports it doesn't work.
Animating values that control animation is not something we intend to support. You can also not animate the scene start/end frame, etc.

I'm curious to find out what the use case is here... if you have a sequence of images, you can control with these buttons a mapping from image to rendered frame. There's a 1 to 1 (linear) relationship between rendered frame and texture image.%%%

%%%We purposedly disabled this, after getting bugreports it doesn't work. Animating values that control animation is not something we intend to support. You can also not animate the scene start/end frame, etc. I'm curious to find out what the use case is here... if you have a sequence of images, you can control with these buttons a mapping from image to rendered frame. There's a 1 to 1 (linear) relationship between rendered frame and texture image.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

%%%Thanks Ton.

For me, I am using it to load an image sequence texture, displaying a single frame, then keyframing the offset parameter, for simple replacement/stop motion animation (a al Pocoyo). I know there are other ways to achieve this, but this was a simple and easily understandable way for me.

Cheers, S.%%%

%%%Thanks Ton. For me, I am using it to load an image sequence texture, displaying a single frame, then keyframing the offset parameter, for simple replacement/stop motion animation (a al Pocoyo). I know there are other ways to achieve this, but this was a simple and easily understandable way for me. Cheers, S.%%%

%%%Would also like to have this feature back. It is an easy way to time an video or animation while animating. %%%

%%%Would also like to have this feature back. It is an easy way to time an video or animation while animating. %%%
Author

%%%As Stephen Mentioned, I am using this features for image replacement, and then animate 2d characters eyes, expressions, mouths, and other things...

If peole says that it doesn't work, maybe it is because they do not know how to use it.

If this feature comes back I can write a long text, tutorial, video, whatever.. to explain how to use it. I promise!

You can take a look at some animations that I made here:
http://rme.ricolandia.com/2012/04/25/nova-animacao-eyeka/

Here, with tutorials:
https://www.youtube.com/user/ricgraca

This is a great feature. Now using back blender 2.64, cause a lot of characters were made with this usage.

Thanks Ton, Tobias, Stephen...

%%%

%%%As Stephen Mentioned, I am using this features for image replacement, and then animate 2d characters eyes, expressions, mouths, and other things... If peole says that it doesn't work, maybe it is because they do not know how to use it. If this feature comes back I can write a long text, tutorial, video, whatever.. to explain how to use it. I promise! You can take a look at some animations that I made here: http://rme.ricolandia.com/2012/04/25/nova-animacao-eyeka/ Here, with tutorials: https://www.youtube.com/user/ricgraca This is a great feature. Now using back blender 2.64, cause a lot of characters were made with this usage. Thanks Ton, Tobias, Stephen... %%%
Member

%%%The bug report was about all the values there (start, nr of frames, image type) and about adding drivers for it.

Drivers would still fail if add it back, but fcurves for offset seem to sortof work. But you have to know what you do.
The fact it works is more by accident than a planned feature... so that is the dilemma here.

I can restore the feature to allow animating offset, but if we get future bugreports about it I'll send them over to you guys here!
(Fix goes to svn now)

We also could do this so much better... a real "time map" curve for MovieClips for example.%%%

%%%The bug report was about all the values there (start, nr of frames, image type) and about adding drivers for it. Drivers would still fail if add it back, but fcurves for offset seem to sortof work. But you have to know what you do. The fact it works is more by accident than a planned feature... so that is the dilemma here. I can restore the feature to allow animating offset, but if we get future bugreports about it I'll send them over to you guys here! (Fix goes to svn now) We also could do this so much better... a real "time map" curve for MovieClips for example.%%%
Author

%%%Ton, thanks.
We know what we are doing. It´s very important for animation. I think we can write a documentation about how to use it the way it is.

thanks again.
%%%

%%%Ton, thanks. We know what we are doing. It´s very important for animation. I think we can write a documentation about how to use it the way it is. thanks again. %%%

%%%Thanks Ton - It's one of the great things in Blender - having the power to find solutions to things that haven't even been considered as 'features'.

Cheers!%%%

%%%Thanks Ton - It's one of the great things in Blender - having the power to find solutions to things that haven't even been considered as 'features'. Cheers!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34493
No description provided.