Bugfix #34493

Should go to 2.66a

Image Sequence texture now allows to animate "Offset" again with fcurves.
This was disabled for 2.65, it only works for fcurve key inserting (not
for drivers), but too many people have been using to animate character
textures already...